<?xml version="1.0"?>
<package format="2">
  <name>riaodo_ros</name>
  <version>0.1.0</version>
  <description>The meta package for RIA ODO</description>

  <maintainer email="chenlinkai@gaitechrobotics.com">Leo Chen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>riaodo_teleop</exec_depend>
  <exec_depend>riaodo_description</exec_depend>
  <exec_depend>riaodo_wheel_support_motion</exec_depend>

  <export>
   <metapackage/>
  </export>
</package>
